--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,10 +1,10 @@
 image: Ubuntu2004  # образ для сборки
 
-stack: jdk 11  # версия JDK
+stack: jdk 1.8  # версия JDK
 
 branches:
   only:
-    - master  # ветка git
+    - main  # ветка git
 
 build: off  # будем использовать свой скрипт сборки
 
